# sauti-tts-inference

./: .gitignore  README.md
backend/: modal_app.py  pyproject.toml
backend/app/: __init__.py  api.py  asr.py  engine.py  f5_infer_safe.py  schemas.py  security.py  speakers.json  sts.py  sts_prompt.py  utils.py
frontend/: index.html  package.json  pnpm-lock.yaml  tsconfig.json
frontend/src/: main.ts  styles.css
