[project]
name = "sauti-tts-inference-backend"
version = "0.1.0"
description = "Inference-only Modal backend for Sauti speech models"
requires-python = ">=3.11"
dependencies = [
  "accelerate",
  "fastapi",
  "modal",
  "numpy",
  "openai",
  "python-multipart",
  "rich",
  "safetensors",
  "soundfile",
  "torch",
  "torchaudio",
  "tqdm",
  "transformers",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
